[project]
name = "polygon-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "markdown-include>=0.8.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocs-multirepo-plugin>=0.8.3",
    "mkdocs-open-in-new-tab>=1.0.8",
    "mkdocs-redirects>=1.2.2",
    "mkdocs-swagger-ui-tag>=0.7.1",
    "pymdown-extensions>=10.15",
]
